# HaruCloud

./: .gitignore  BOOTH.txt  COMMIT_CONVENTION.md  LICENSE  README.md  RELEASE_NOTES.md  latest.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.tauri/: updater.key.pub
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
ui/: index.html  main.js  styles.css
