[package]
name = "app"
version = "0.1.0-beta.1"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
tokio = { version = "1", features = ["fs", "rt-multi-thread"] }
md5 = "0.8"
